--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sanity/image-url": "^1.0.1",
     "@types/react-timeago": "^4.1.3",
     "next": "latest",
+    "next-auth": "^4.8.0",
     "next-sanity": "^0.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
